--- a/class01/index.html
+++ b/class01/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="/class01/main_04.js"></script>
+    <title>My first App - CoderHouse</title>
+    <script src="/class01/main_05.js"></script>
 </head>
 <body>
-    
+    <h2>This page content an App</h2>
 </body>
 </html>
