New notes about lecture DOM

--- a/class08-DOM/index.html
+++ b/class08-DOM/index.html
@@ -10,9 +10,13 @@
     <title>DOM</title>
 </head>
 <body>
-    <div>
-        <h1>Titulo</h1>
-    </div>
-    
+    <h1>Titulo</h1>
+    <div id="miContenido">div</div>
+    <span class="mySpan">Texto1</span>
+    <span class="mySpan">Texto2</span>
+    <span class="mySpan">Texto3</span>
+    <span class="mySpan">Texto4</span>
+    <span class="mySpan">Texto5</span>
+    <span class="mySpan">Texto6</span>
 </body>
 </html>
