Agree new notes

--- a/class08-DOM/index.html
+++ b/class08-DOM/index.html
@@ -7,16 +7,10 @@
     <!--defer = el script al estar en el head se carga antes del body
     El defer se carga posteriormente => Por eso se deja a veces el JS abajo de últimas-->
     <script defer src="./script.js"></script>
-    <title>DOM</title>
+    <title>CRUD</title>
 </head>
 <body>
-    <h1>Titulo</h1>
-    <div id="miContenido">div</div>
-    <span class="mySpan">Texto1</span>
-    <span class="mySpan">Texto2</span>
-    <span class="mySpan">Texto3</span>
-    <span class="mySpan">Texto4</span>
-    <span class="mySpan">Texto5</span>
-    <span class="mySpan">Texto6</span>
+    <h1>Text</h1>
+    <h3>Title</h3>
 </body>
 </html>
