Agree and init DOM challenge

--- a/class07-funcionesElevadas/after/rentalCar/index.html
+++ b/class07-funcionesElevadas/after/rentalCar/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRIMERA ENTREGA DEL PROYECTO FINAL</title>
+    <link rel="stylesheet" href="./styles.css">
+    <title>Rental Car</title>
 </head>
 <body>
+    <div id="titlePrincipal">
+        <h2>Rental Car</h2>
+    </div>
+
+    <div id="containerData">
+        <p>La idea del proyecto es realizar un simulador de renta de carros.<br>
+        Hay un listado de carros. El cliente elige según lo que busca y fechas disponiles el carro a alquilar.</p>
+        <h3>Por: Juan David Lizarralde Niño</h3>
+    </div>
+
+    <div id="carNew">
+        <h4>1. Carro nuevo y recien creado ha sido agregado al array:</h4>
+        <ul id="listCarNew">
+            <li id="marcaCarNew">Marca del carro</li>
+            <li id="modeloCarNew">Modelo del carro</li>
+            <li id="anioCarNew">Año del carro</li>
+        </ul>
+    </div>
+
+    <div id="carList">
+        <h4>2. Lista de carros</h4>
+    </div>
+
+    <div id="carFind">
+        <h4>3. El carro que buscas es:</h4>
+    </div>
+
+
+    
+
     <script src="./script.js"></script>
-    <h2>Rental Car</h2>
-    <h4>La idea de mi proyecto es realizar un simulador de renta de carros.<br>
-    Hay un listado de carros. El cliente elige según lo que busca y fechas disponiles el carro a alquilar.</h4>
-    <h3>Por: Juan David Lizarralde Niño</h3>
 </body>
 </html>
