Finish the challenge DOM!!

--- a/class07-funcionesElevadas/after/rentalCar/index.html
+++ b/class07-funcionesElevadas/after/rentalCar/index.html
@@ -15,7 +15,6 @@
     <div id="containerData">
         <p>La idea del proyecto es realizar un simulador de renta de carros.<br>
         Hay un listado de carros. El cliente elige según lo que busca y fechas disponiles el carro a alquilar.</p>
-        <h3>Por: Juan David Lizarralde Niño</h3>
     </div>
 
     <div id="carNew">
@@ -29,14 +28,17 @@
 
     <div id="carList">
         <h4>2. Lista de carros</h4>
+        <div id="carFindDiv">
+        </div>
     </div>
 
     <div id="carFind">
         <h4>3. El carro que buscas es:</h4>
     </div>
 
-
-    
+    <div id="by">
+        <h3>Por: Juan David Lizarralde Niño</h3>
+    </div>
 
     <script src="./script.js"></script>
 </body>
