New notes about js

--- a/class09-Eventos/index.html
+++ b/class09-Eventos/index.html
@@ -20,6 +20,17 @@
             <div class="col-xs-4">
             <button id="miButton3" onclick="btn3()">Try me 3</button>
             </div>
+
+            <h3>Eventos mouse</h3>
+            <div class="col-xs-4">
+                <button id="miButton4">Try me 4</button>
+            </div>
+            <div class="col-xs-4">
+                <button id="miButton5">Try me 5</button>
+            </div>
+            <div class="col-xs-4">
+                <button id="miButton6">Try me 6</button>
+            </div>
         </div>
     </div>
     
