--- a/class09-Eventos/index.html
+++ b/class09-Eventos/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <h1 class="text-center">Migo</h1>
         <div class="row">
             <div class="col-xs-4">
@@ -30,6 +30,20 @@
             </div>
             <div class="col-xs-4">
                 <button id="miButton6">Try me 6</button>
+            </div>
+
+            <h3>Cod. Facilito</h3>
+            <div class="col-xs-4">
+                <button type="button" id="miButton7" class="btn btn-primary miButton7">Try me 7</button>
+            </div>
+            <div class="col-xs-4">
+                <button type="button" id="miButton8" class="btn btn-primary">Ocultar</button>
+                <h2 id="h2Estoy">
+                    Soy yo
+                </h2>
+            </div>
+            <div class="col-lg-10">
+                <button type="button" id="miButton9" class="btn btn-primary">Try me 9</button>
             </div>
         </div>
     </div>
