--- a/class15-AJAX-Fetch/index.html
+++ b/class15-AJAX-Fetch/index.html
@@ -10,9 +10,10 @@
     <h1>Sistema Blog</h1>
     <button id="admin">Admin</button>
     <button id="ver">Ver</button>
+    <button id="local">Local</button>
 
     <div id="appContainer"></div>
 
-    <script src="./main.js"></script>
+    <script src="/class15-AJAX-Fetch/main.js"></script>
 </body>
 </html>
